sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (tab.length < 2)
  ^AlgBubbleSort1:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return true;
    ^AlgBubbleSort1:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  do{
  ^